Add annotation crowdsourcing backend and context menu
Backend (TypeScript + Express + Prisma + PostgreSQL):
- POST /annotations - submit user annotations
- GET /annotations - list annotations (paginated)
- GET /annotations/by-url - get annotations for a URL
- GET /stats - annotation statistics
- GET /export - export as JSONL for prompt engineering
- Ready for Railway deployment

Extension updates:
- Added context menu: right-click selected text -> 'Annotate as logical issue'
- Annotation dialog with fallacy type selector and free text
- Submits to backend API
- Disabled debug logging (DEBUG_ENABLED = false)

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,13 @@ node_modules/
 # Logs
 *.log
 *.log.old
-debug-server/debug.log
 
 # Test files and results
 tests/
+
+# Build artifacts
+dist/
+*.zip
 
 # OS files
 .DS_Store
@@ -21,6 +24,3 @@ Thumbs.db
 .idea/
 *.swp
 *.swo
-
-# Build artifacts
-*.zip
