Add homepage with download and installation instructions
- Beautiful landing page at / with extension download
- Installation instructions for sideloading
- Feature highlights and demo section
- Extension bundler script that runs during build
- Disables debug mode in bundled extension
- Static file serving for extension zip

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
+    "build": "node scripts/bundle-extension.js && tsc",
     "start": "node dist/index.js",
+    "bundle-extension": "node scripts/bundle-extension.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
