Refactor prompt to aligned style, remove explicit fallacy types
- Replace structured prompt with aligned, principle-based approach
- Remove 'type' field from JSON (no more explicit fallacy names)
- Update UI to show importance badges instead of fallacy types
- Update messaging: 'logical gaps' instead of 'fallacies'
- Add graceful handling for missing type field in display code

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Logic Checker",
   "version": "1.1.0",
-  "description": "Surfaces genuine logical gaps and reasoning issues in articles",
+  "description": "Analyzes articles for logical fallacies and crowdsources annotations",
   "permissions": [
     "activeTab",
     "scripting",
