Rebrand from Logic Checker to SanityCheck
- Update extension name and metadata
- Update homepage and admin dashboard branding
- New tagline: 'Keep your reasoning sharp'
- Update package.json and README
- Rename extension zip to sanitycheck-extension.zip
- Update all comments and references

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Logic Checker",
+  "name": "SanityCheck",
   "version": "1.1.0",
   "description": "Surfaces genuine logical gaps and reasoning issues in articles",
   "permissions": [
