--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "node scripts/bundle-extension.js && tsc",
     "start": "node dist/index.js",
     "bundle-extension": "node scripts/bundle-extension.js",
+    "build-extension": "bash scripts/build-extension.sh",
+    "build-extension-dev": "bash scripts/build-extension.sh dist",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
@@ -26,9 +28,11 @@
     "prisma": "^6.2.1"
   },
   "devDependencies": {
+    "@mozilla/readability": "^0.6.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "esbuild": "^0.27.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
