--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "sanitycheck-backend",
+  "name": "sanitycheck",
   "version": "1.0.0",
-  "description": "Backend for crowdsourcing logical fallacy annotations",
+  "description": "AI-powered browser extension that spots logical gaps in articles",
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "node scripts/bundle-extension.js && tsc",
+    "build": "node scripts/build.js",
+    "build:backend": "node scripts/build.js --backend-only",
+    "build:extension": "node scripts/build.js --extension-only",
     "start": "node dist/index.js",
-    "bundle-extension": "node scripts/bundle-extension.js",
-    "build-extension": "bash scripts/build-extension.sh",
-    "build-extension-dev": "bash scripts/build-extension.sh dist",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
@@ -29,10 +28,12 @@
   },
   "devDependencies": {
     "@mozilla/readability": "^0.6.0",
+    "@types/chrome": "^0.1.32",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
     "esbuild": "^0.27.1",
+    "jsdom": "^27.0.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
