refactor: unified build directory structure
Architecture changes:
- All build output now goes to build/ directory:
  - build/backend/ - compiled server code
  - build/extension/ - bundled extension files
  - build/sanitycheck-extension.zip - distribution zip

- All extension source now in src/extension/:
  - TypeScript: background.ts, content.ts, popup.ts, settings.ts, debug.ts
  - Static files: src/extension/static/ (manifest, HTML, CSS, icons)

- Everything now imports from src/shared/:
  - BACKEND_URL, DEFAULT_ANALYSIS_PROMPT
  - contentStyles (highlight CSS)
  - Types: AnalysisResult, Importance, etc.

Build improvements:
- Single build script handles backend + extension
- esbuild bundles each extension entry point with shared code inlined
- Static files copied automatically to build/extension/

Cleanup:
- Remove old extension/ directory (was mix of source and build)
- Remove old dist/ references
- Remove duplicate root-level extension files

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "sanitycheck",
   "version": "1.0.0",
   "description": "AI-powered browser extension that spots logical gaps in articles",
-  "main": "dist/index.js",
+  "main": "build/backend/index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "node scripts/build.js",
     "build:backend": "node scripts/build.js --backend-only",
     "build:extension": "node scripts/build.js --extension-only",
-    "start": "node dist/index.js",
+    "start": "node build/backend/index.js",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix",
