--- a/src/extension/tsconfig.json
+++ b/src/extension/tsconfig.json
@@ -1,15 +1,11 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
     "lib": ["ES2020", "DOM"],
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "bundler",
-    "types": ["chrome"]
+    "types": ["chrome"],
+    "noEmit": true
   },
   "include": ["./**/*", "../shared/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "static"]
 }
