--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
     "@typescript-eslint/parser": "^8.49.0",
+    "archiver": "^7.0.1",
     "esbuild": "^0.27.1",
     "eslint": "^9.39.2",
     "husky": "^9.1.7",
