--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/backend/index.js",
   "scripts": {
     "dev": "node scripts/dev.js",
-    "dev:db": "docker-compose up -d",
+    "dev:db": "docker-compose up",
     "dev:db:stop": "docker-compose down",
     "build": "node scripts/build.js",
     "build:backend": "node scripts/build.js --backend-only",
