--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lint-staged": "^16.2.7",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.49.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "ws": "^8.18.3"
   }
 }
